src/components/SmallTimetable.module.css
.timetable {
    width: 100%;
    height: calc(max-content + 60px);
    background-color: white;
}

.timetableHeading {
    width: 100%;
    height: 5rem;
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 1.8rem;
    font-weight: 700;
    user-select: none;
}

.timetableHeading > div {
    margin-right: 0.6rem;
    background-color: transparent;
    padding: 0.5rem 1.2rem;
    border-radius: 1.2rem;
    transition: var(--transition-background-color);
    cursor: pointer;
    display: flex;
    align-items: center;
}

.timetableHeading > div:hover {
    background-color: white;
}

.downArrow {
    font-size: 1rem;
    margin-left: 0.3rem;
}

.dayContainer {
    display: flex;
    justify-content: space-between;
    align-items: flex-end;
    width: 100%;
    height: 3rem;
    padding: 0 1rem;
    box-sizing: border-box;
    margin-bottom: 1rem;
}

.day {
    background: none;
    cursor: pointer;
    font-size: 20px;
    font-weight: 700;
    transition: font-size 0.2s var(--transition-timing-function);
    color: rgba(0, 0, 0, 0.4);
}

.selectedDay {
    font-size: 24px;
    color: #222222;
}

.notLogin {
    width: 100%;
    display: flex;
    justify-content: center;
    padding: 4rem 0;
    font-size: 1.6rem;
    font-weight: 700;
}

